--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "tailwindcss": "^4.1.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.24.0",
     "@tailwindcss/vite": "^4.1.1",
     "@types/node": "^22.13.17",
     "@types/react": "^19.1.0",
