--- a/package.json
+++ b/package.json
@@ -8,27 +8,28 @@
     "build": "tsc && vite build",
     "lint": "eslint ./src/**/**/*.{ts,tsx} --fix",
     "preview": "vite preview",
+    "update:heroui:cli": "npx heroui-cli@latest upgrade --all --beta",
     "update:heroui": "node --no-warnings --import 'data:text/javascript,import { register } from \"node:module\"; import { pathToFileURL } from \"node:url\"; register(\"ts-node/esm\", pathToFileURL(\"./\"));' ./update-heroui.ts"
   },
   "dependencies": {
-    "@heroui/button": "^2.2.18-beta.1",
-    "@heroui/code": "^2.2.14-beta.1",
-    "@heroui/dropdown": "^2.3.18-beta.1",
-    "@heroui/input": "^2.4.18-beta.1",
-    "@heroui/kbd": "^2.2.14-beta.1",
-    "@heroui/link": "^2.2.15-beta.1",
-    "@heroui/modal": "^2.2.15-beta.1",
-    "@heroui/navbar": "^2.2.16-beta.1",
-    "@heroui/shared-utils": "^2.1.9-beta.1",
-    "@heroui/snippet": "^2.2.19-beta.1",
-    "@heroui/switch": "^2.2.16-beta.1",
-    "@heroui/system": "^2.4.14-beta.1",
-    "@heroui/theme": "^2.4.14-beta.1",
-    "@heroui/tooltip": "^2.2.15-beta.1",
+    "@heroui/button": "^2.2.20-beta.1",
+    "@heroui/code": "^2.2.15-beta.1",
+    "@heroui/dropdown": "^2.3.20-beta.1",
+    "@heroui/input": "^2.4.20-beta.1",
+    "@heroui/kbd": "^2.2.16-beta.1",
+    "@heroui/link": "^2.2.17-beta.1",
+    "@heroui/modal": "^2.2.17-beta.1",
+    "@heroui/navbar": "^2.2.18-beta.1",
+    "@heroui/shared-utils": "^2.1.9-beta.2",
+    "@heroui/snippet": "^2.2.21-beta.1",
+    "@heroui/switch": "^2.2.18-beta.1",
+    "@heroui/system": "^2.4.16-beta.1",
+    "@heroui/theme": "^2.4.16-beta.1",
+    "@heroui/tooltip": "^2.2.17-beta.1",
     "@react-aria/visually-hidden": "3.8.22",
     "@react-types/shared": "^3.29.0",
     "@tailwindcss/postcss": "^4.1.4",
-    "framer-motion": "^12.7.4",
+    "framer-motion": "^12.9.4",
     "i18next": "^25.0.0",
     "i18next-http-backend": "^3.0.2",
     "react": "^19.1.0",
@@ -36,7 +37,7 @@
     "react-i18next": "^15.4.1",
     "react-router-dom": "^7.5.1",
     "tailwind-variants": "^1.0.0",
-    "tailwindcss": "^4.1.4"
+    "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.4",
